--- a/catalog-item.html
+++ b/catalog-item.html
@@ -33,38 +33,38 @@
                     <li><a href="#">Главная</a></li>
                     <li><a href="#">Магазин</a></li>
                     <li><a href="#">Средство для ухода</a></li>
-                    <li><a href="#">Набор для путешествий «Baxter of California»</a></li>
+                    <li><a href="#" active>Набор для путешествий «Baxter of California»</a></li>
                 </ul>
             </div>
             <div class="item-content">
                 <div class="item-content-left">
                     <section class="item-content-gallery">
-                        <img src="/img/goods-04-big.jpg" alt="Travel kit" width="460px" height="498px">
-                        <img src="/img/goods-04-02.jpg" alt="Travel kit" width="140px" height="149px">
-                        <img src="/img/goods-04-01.jpg" alt="Travel kit" width="140px" height="149px">
-                        <img src="/img/goods-04-big.jpg" alt="Travel kit" width="140px" height="149px">
+                        <div class="item-content-gallery-main">
+                            <img class="active" src="/img/goods-04-big.jpg" alt="Travel kit" width="460px" height="498px">
+                            <img src="/img/goods-04-02.jpg" alt="Travel kit" width="460px" height="498px">
+                            <img src="/img/goods-04-01.jpg" alt="Travel kit" width="460px" height="498px">    
+                        </div>
+                        <div class="item-content-gallery-thumbs">
+                            <img class="active" src="/img/goods-04-big.jpg" alt="Travel kit" width="140px" height="149px">
+                            <img src="/img/goods-04-02.jpg" alt="Travel kit" width="140px" height="149px">
+                            <img src="/img/goods-04-01.jpg" alt="Travel kit" width="140px" height="149px">    
+                        </div>
                     </section>
                 </div>
                 <div class="item-content-right">
                     <section class="item-content-story">
-                        <table>
-                            <tr>
-                                <td>Есть в наличии</td>
-                                <td>Артикул: Dexter-AE</td>
-                            </tr>
-                        </table>
+                        <div class="item-content-article">
+                            <span>Есть в наличии</span>
+                            <span>Артикул: Dexter-AE</span>
+                        </div>
                         <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
                         </p>
-                        <table class="item-price">
-                            <tr>
-                                <td>2 900 руб.</td>
-                                <td>
-                                    <button class="buy-btn" type="button">Купить</button>
-                                </td>
-                            </tr>
-                        </table>
+                        <div class="item-content-price">
+                            <span>2 900 руб.</span>
+                            <button class="button item-content-button">Купить</button>
+                        </div>
                         <h3>В набор входят:</h3>
-                        <ul class="item-included">
+                        <ul class="item-composition">
                             <li>Средство для умывания (50 Мл)</li>
                             <li>Увлажняющий крем (50 Мл)</li>
                             <li>Крем для бритья (50 Мл)</li>
@@ -88,6 +88,7 @@
                     <a class="btn-social-vk" href="#">Vk</a>
                     <a class="btn-social-fb" href="#">Fb</a>
                     <a class="btn-social-ins" href="#">Inst</a>
+                    <!--<a class="btn-social-new" href="#">New</a>-->
                 </section>
                 <section class="footer-copyright">
                     <p>Разработано:</p>
