--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li><a href="#">Главная</a></li>
                     <li><a href="#">Магазин</a></li>
-                    <li><a href="#">Средство для ухода</a></li>
+                    <li><a href="#" active>Средство для ухода</a></li>
                 </ul>
             </div>
             <div class="catalog-content">
@@ -63,103 +63,75 @@
                 </div>
                 <div class="right-column">
                     <section class="catalog-items">
-                        <table class="catalog-table">
-                            <tr>
-                                <td>
-                                    <article class="catalog-item">
-                                        <img src="/img/goods-04.jpg" alt="Набор для путешественника «Baxter of California»" width="220px" height="165px">
-                                        <p>Набор для путешественника «Baxter of California»</p>
-                                        <table class="item-price">
-                                            <tr>
-                                                <td>2 900 руб.</td>
-                                                <td>
-                                                    <button class="buy-btn" type="button">Купить</button>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </article>
-                                </td>
-                                <td>
-                                    <article class="catalog-item">
-                                        <img src="/img/goods-01.jpg" alt="Увлажняющий кондиционер of California»" width="220px" height="165px">
-                                        <p>Увлажняющий кондиционер of California»</p>
-                                        <table class="item-price">
-                                            <tr>
-                                                <td>750 руб.</td>
-                                                <td>
-                                                    <button class="buy-btn" type="button">Купить</button>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </article>
-                                </td>
-                                <td>
-                                    <article class="catalog-item">
-                                        <img src="/img/goods-05.jpg" alt="Гель для волос «Suavecito»" width="220px" height="165px">
-                                        <p>Гель для волос «Suavecito»</p>
-                                        <table class="item-price">
-                                            <tr>
-                                                <td>290 руб.</td>
-                                                <td>
-                                                    <button class="buy-btn" type="button">Купить</button>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </article>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <article class="catalog-item">
-                                        <img src="/img/goods-02.jpg" alt="Глина для укладки волос «American Crew»" width="220px" height="165px">
-                                        <p>Глина для укладки волос «American Crew»</p>
-                                        <table class="item-price">
-                                            <tr>
-                                                <td>500 руб.</td>
-                                                <td>
-                                                    <button class="buy-btn" type="button">Купить</button>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </article>
-                                </td>
-                                <td>
-                                    <article class="catalog-item">
-                                        <img src="/img/goods-03.jpg" alt="Гель для волос «American Crew»" width="220px" height="165px">
-                                        <p>Гель для волос «American Crew»</p>
-                                        <table class="item-price">
-                                            <tr>
-                                                <td>300 руб.</td>
-                                                <td>
-                                                    <button class="buy-btn" type="button">Купить</button>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </article>
-                                </td>
-                                <td>
-                                    <article class="catalog-item">
-                                        <img src="/img/goods-06.jpg" alt="Набор для бритья «Baxter of California»" width="220px" height="165px">
-                                        <p>Набор для бритья «Baxter of California»</p>
-                                        <table class="item-price">
-                                            <tr>
-                                                <td>3 900 руб.</td>
-                                                <td>
-                                                    <button class="buy-btn" type="button">Купить</button>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </article>
-                                </td>
-                            </tr>
-                        </table>
+                        <article class="catalog-item">
+                            <a class="catalog-item-img" href="#">
+                                <img src="/img/goods-04.jpg" alt="Набор для путешественника «Baxter of California»" width="220px" height="165px">
+                            </a>
+                            <a class="catalog-item-title" href="#">Набор для путешественника <span>«Baxter of California»</span></a>
+                            <div class="catalog-item-price">
+                                <span>2 900 руб.</span>
+                                <button class="button catalog-item-button">Купить</button>
+                            </div>
+                        </article>
+                        <article class="catalog-item">
+                            <a class="catalog-item-img" href="#">
+                                <img src="/img/goods-01.jpg" alt="Увлажняющий кондиционер «Baxter of California»" width="220px" height="165px">
+                            </a>
+                            <a class="catalog-item-title" href="#">Увлажняющий кондиционер <span>«Baxter of California»</span></a>
+                            <div class="catalog-item-price">
+                                <span>750 руб.</span>
+                                <button class="button catalog-item-button">Купить</button>
+                            </div>
+                        </article>
+                        <article class="catalog-item">
+                            <a class="catalog-item-img" href="#">
+                                <img src="/img/goods-05.jpg" alt="Гель для волос «Suavecito»" width="220px" height="165px">
+                            </a>
+                            <a class="catalog-item-title" href="#">Гель для волос <span>«Suavecito»</span></a>
+                            <div class="catalog-item-price">
+                                <span>290 руб.</span>
+                                <button class="button catalog-item-button">Купить</button>
+                            </div>
+                        </article>
+                        <article class="catalog-item">
+                            <a class="catalog-item-img" href="#">
+                                <img src="/img/goods-02.jpg" alt="Глина для укладки волос «American Crew»" width="220px" height="165px">
+                            </a>
+                            <a class="catalog-item-title" href="#">Глина для укладки волос <span>«American Crew»</span></a>
+                            <div class="catalog-item-price">
+                                <span>500 руб.</span>
+                                <button class="button catalog-item-button">Купить</button>
+                            </div>
+                        </article>
+                        <article class="catalog-item">
+                            <a class="catalog-item-img" href="#">
+                                <img src="/img/goods-03.jpg" alt="Гель для волос «American Crew»" width="220px" height="165px">
+                            </a>
+                            <a class="catalog-item-title" href="#">Гель для волос <span>«American Crew»</span></a>
+                            <div class="catalog-item-price">
+                                <span>300 руб.</span>
+                                <button class="button catalog-item-button">Купить</button>
+                            </div>
+                        </article>
+                        <article class="catalog-item">
+                            <a class="catalog-item-img" href="#">
+                                <img src="/img/goods-06.jpg" alt="Набор для бритья «Baxter of California»" width="220px" height="165px">
+                            </a>
+                            <a class="catalog-item-title" href="#">Набор для бритья <span>«Baxter of California»</span></a>
+                            <div class="catalog-item-price">
+                                <span>3 900 руб.</span>
+                                <button class="button catalog-item-button">Купить</button>
+                            </div>
+                        </article>         
                     </section>
-                    <div class="catalog-buttons">
-                        <a class="catalog-btn" href="#">1</a>
-                        <a class="catalog-btn" href="#">2</a>
-                        <a class="catalog-btn" href="#">3</a>
-                        <a class="catalog-btn" href="#">4</a>
-                    </div>
+                    <section class="pagination">
+                        <ul class="pagination-list">
+                            <li><a class="pagination-button" href="#">1</a></li>
+                            <li><a class="pagination-button" href="#" active>2</a></li>
+                            <li><a class="pagination-button" href="#">3</a></li>
+                            <li><a class="pagination-button" href="#">4</a></li>
+                        </ul>
+                    </section>
                 </div>
             </div>
         </main>
@@ -176,6 +148,7 @@
                     <a class="btn-social-vk" href="#">Vk</a>
                     <a class="btn-social-fb" href="#">Fb</a>
                     <a class="btn-social-ins" href="#">Inst</a>
+                    <!--<a class="btn-social-new" href="#">New</a>-->
                 </section>
                 <section class="footer-copyright">
                     <p>Разработано:</p>
