--- a/price.html
+++ b/price.html
@@ -31,7 +31,7 @@
                 <h2>Прайс-лист</h2>
                 <ul>
                     <li><a href="#">Главная</a></li>
-                    <li><a href="#">Прайс-лист</a></li>
+                    <li><a href="#" active>Прайс-лист</a></li>
                 </ul>
             </div>
             <div class="price-content">
@@ -84,6 +84,7 @@
                     <a class="btn-social-vk" href="#">Vk</a>
                     <a class="btn-social-fb" href="#">Fb</a>
                     <a class="btn-social-ins" href="#">Inst</a>
+                    <!--<a class="btn-social-new" href="#">New</a>-->
                 </section>
                 <section class="footer-copyright">
                     <p>Разработано:</p>
