--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                        Пн - Пт: С 10:00 до 22:00<br>
                        Сб - Вс: С 10:00 до 19:00
                     </p>
-                    <a class="btn" href="#">Как проехать</a>
-                    <a class="btn" href="#">Обратная связь</a>
+                    <a class="button index-button" href="#">Как проехать</a>
+                    <a class="button index-button" href="#">Обратная связь</a>
                 </div>
                 <div class="index-content-right">
                     <h2 class="index-content-right">Записаться</h2>
