--- a/price.html
+++ b/price.html
@@ -10,7 +10,7 @@
         <header class="main-header"> <!-- header-->
             <div class="container">
                 <div class="logo-header">
-                <a href="#"><img src="/img/logo-header.png" alt="Логотип" width="111px" height="24px"></a>
+                <a><img src="/img/logo-header.png" alt="Логотип" width="111px" height="24px"></a>
                 </div>
                 <nav class="main-navigation">
                     <ul>
